@@ -1,3 +1,10 @@
+2006-04-25  Richard Henderson  <rth@redhat.com>
+
+	PR libgomp/25865
+	* configure.ac: Use GCC_CHECK_TLS.
+	* acinclude.m4 (LIBGOMP_CHECK_TLS): Remove.
+	* Makefile.in, aclocal.m4, configure: Regenerate.
+
 2006-04-10  Matthias Klose  <doko@debian.org>
 
 	* testsuite/lib/libgomp.exp (libgomp_init): Recognize multilib
